<resources>
    <string name="app_name">My Profile</string>
    <string name="profile">Full Name : Rifdah Alifah\nNickname : Rifdah\nPlace, Date of Birth : Jakarta, April 8th 2002\nAge : 18 years old\nHeight / Weight : 165 cm / 55 kg\nAddress : St. Multi Karya no.11 \n Utankayu, East Jakarta\nHoby : Reading\nMobile Phone : 081318548108\nEmail address : rifdahalifah37@gmail.com\nFuture goals : Pragrammer, System Analyst,\n Hafidzah^^</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="hello_fellas">hello, fellas !</string>
    <string name="welocome_to_my_profile">WELOCOME TO MY PROFILE</string>
    <string name="paperplane">paperplane</string>
    <string name="full_name">Full Name</string>
    <string name="rifdah_alifah">: Rifdah Alifah</string>
    <string name="nickname">Nickname</string>
    <string name="rifdah">: Rifdah</string>
    <string name="jakarta_8th_april_2002">: Jakarta, 8th April 2002</string>
    <string name="place_date_of_birth">Place, Date of Birth</string>
    <string name="age">Age</string>
    <string name="_18_years_old">: 18 years old</string>
    <string name="format_profile">: Rifdah Alifah\n: Rifdah\n: Jakarta, April 8th 2002\n: 18 years old\n: 160 cm / 55 kg\n: St. Multi Karya no.11\n Utan kayu, East Jakarta\n: Reading\n: Programmer, System Analyst,\n             Hafidzah^^\n: 081318548108\n: rifdahalifah37@gmail.com</string>
    <string name="isi_profile">Full Name\nNickname\nPlace, Date of Birth\nAge\nHeight / Weight\nAddress\n\nHobby\nFuture goals\n\nMobile Phone\nEmail address</string>
    <string name="motto">Holding the Dunya (world) in your hands and not your heart</string>
    <string name="life_motto">MOTTO</string>
    <string name="plane">plane</string>
    <string name="who_am_i">Who am i?</string>
    <string name="hi_let_s_get_to_know_more_about_me_and_feel_free_to_be_my_friend">Hi! let\'s get to know more about me and feel free to be my friend.</string>
    <string name="see_my_profile">See My Profile</string>
    <string name="me">ME</string>
</resources>