<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_fix"
    tools:context=".Cover">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/plane"
        android:contentDescription="@string/plane" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_am_i"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:fontFamily="@font/yummy"/>


    <ImageView
        android:layout_width="228dp"
        android:layout_height="372dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/foto_rifdah"
        android:contentDescription="@string/me" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bakso_sapi"
        android:gravity="center"
        android:text="@string/hi_let_s_get_to_know_more_about_me_and_feel_free_to_be_my_friend"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/bakso_sapi"
        android:text="@string/see_my_profile"
        android:textColor="#FBFAF6"
        android:textStyle="bold" />


</LinearLayout>